# field-manager-challenge

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  settings.py  urls.py
backend/field_manager/: apps.py  models.py  serializers.py  urls.py  views.py
backend/field_manager/migrations/: 0001_initial.py  0002_channelpartner_landowner.py  0003_remove_field_client_field_landowner.py
example_files/: fields.csv
frontend/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  config.js  index.css  utils.js
frontend/src/components/: index.js
frontend/src/components/common/: MapComponent.js  Navbar.js  ProtectedRoute.js  UnauthorizedPage.js  UserContext.js
frontend/src/components/entities/: FieldDetail.js  FieldList.js  LandownerDetail.js  LandownerList.js
frontend/src/components/forms/: AddFieldForm.js  EditFieldForm.js  LoginPage.js  RegisterPage.js
